--- a/credit-card-service.properties
+++ b/credit-card-service.properties
@@ -1,3 +1,10 @@
 
 eureka.client.service-url-defaultZone = http://localhost:8761/eureka
 server.port = 8001
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/bank_app?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
