--- a/credit-card-service.properties
+++ b/credit-card-service.properties
@@ -1,4 +1,5 @@
-
+eureka.client.registerWithEureka: true
+eureka.client.fetchRegistry: true
 eureka.client.service-url-defaultZone = http://localhost:8761/eureka
 server.port = 8001
 
