--- a/bank-service.properties
+++ b/bank-service.properties
@@ -1,2 +1,5 @@
+#port and server config
+server.port = 9000
 eureka.client.service-url-defaultZone = http://localhost:8761/eureka
-server.port = 8000
+eureka.client.registerWithEureka: true
+eureka.client.fetchRegistry: true
