--- a/credit-card-service.properties
+++ b/credit-card-service.properties
@@ -1,8 +1,10 @@
+#port and server config
+server.port = 8001
+eureka.client.service-url-defaultZone = http://localhost:8761/eureka
 eureka.client.registerWithEureka: true
 eureka.client.fetchRegistry: true
-eureka.client.service-url-defaultZone = http://localhost:8761/eureka
-server.port = 8001
 
+#database config
 spring.datasource.url=jdbc:mysql://localhost:3306/bank_app
 spring.datasource.username=root
 spring.datasource.password=root
