--- a/discovery-server.properties
+++ b/discovery-server.properties
@@ -1,6 +1,7 @@
 #port and server config
 server.port = 8761
 #Eureka server
+eureka.client.service-url-defaultZone = http://localhost:8761/eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
